crash in sculpt mode switching from two meshes after reload saved file #70790

Closed
opened 2019-10-13 17:08:29 +02:00 by dark999 · 9 comments

System Information
Operating system: Linux-5.3.4-1-default-x86_64-with-glibc2.17 64 Bits
Graphics card: GeForce GTX 690/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-12 15:33, hash: 95f020c853
Worked: i cannot reproduce this in Blender 2.80 stable release

Short description of error
after sculpt two object, loading saved file make Blender crash trying to sculp second mesh

Exact steps for others to reproduce the error
1 Open Blender 2.81 95f020c853d6-linux
2 File > Defaults > Load Default Settings
3 select default cube and Ctrl 4 to subdivide it and then apply subdivision modifier
4 duplicate and move it Shif D and drag
4 uncheck Edit > Lock Object Mode
5 enter sculpt mode and draw on duplicated cube
6 select other subdivided cube with Alt LMB
7 enter in sculpt mode and sculpt draw something
8 select duplicated cube and continue to sculpt
9 save file
10 reload factory setting File > Defaults > Load Default Settings or restart Blender
11 open previous saved file
12 continue to sculpt latest sculpted cube (duplicate one)
13 select other cube Alt LMB
14 try to sculpt it - i have a instant crash

i try to find older working Blender 2.81, all linux Blender from 15th September to 13th October dailybuild release still crashing

kixyka_sculpt_crash-01.crash.txt
kixyka_sculpt_crash-01.blend just open .blend, select left object Alt LMB and try to sculpt it

**System Information** Operating system: Linux-5.3.4-1-default-x86_64-with-glibc2.17 64 Bits Graphics card: GeForce GTX 690/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-12 15:33, hash: `95f020c853` Worked: i cannot reproduce this in Blender 2.80 stable release **Short description of error** after sculpt two object, loading saved file make Blender crash trying to sculp second mesh **Exact steps for others to reproduce the error** 1 Open Blender 2.81 95f020c853d6-linux 2 `File > Defaults > Load Default Settings` 3 select default cube and `Ctrl 4` to subdivide it and then apply subdivision modifier 4 duplicate and move it `Shif D` and drag 4 uncheck `Edit > Lock Object Mode` 5 enter sculpt mode and `draw` on duplicated cube 6 select other subdivided cube with `Alt LMB` 7 enter in sculpt mode and sculpt `draw` something 8 select ` duplicated cube` and continue to sculpt 9 save file 10 reload factory setting `File > Defaults > Load Default Settings` or restart Blender 11 open previous saved file 12 continue to sculpt latest sculpted cube (duplicate one) 13 select other cube `Alt LMB` 14 try to sculpt it - i have a instant crash i try to find older working Blender 2.81, all linux Blender from 15th September to 13th October dailybuild release still crashing [kixyka_sculpt_crash-01.crash.txt](https://archive.blender.org/developer/F7813264/kixyka_sculpt_crash-01.crash.txt) [kixyka_sculpt_crash-01.blend](https://archive.blender.org/developer/F7813265/kixyka_sculpt_crash-01.blend) just open .blend, select left object `Alt LMB` and try to sculpt it
Author

Added subscriber: @dark999

Added subscriber: @dark999

Added subscriber: @kixyca

Added subscriber: @kixyca

I have also same crash in windows. system-info.txt

I have also same crash in windows. [system-info.txt](https://archive.blender.org/developer/F7813306/system-info.txt)

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Confirmed.

Confirmed.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Pablo Dobarro was assigned by Jacques Lucke 2019-10-14 09:43:01 +02:00
Member
BKE_pbvh_type(const PBVH * bvh) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/pbvh.c:1452)
sculpt_stroke_is_dynamic_topology(const SculptSession * ss, const Brush * brush) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:855)
sculpt_automasking_enabled(SculptSession * ss, const Brush * br) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:1221)
sculpt_needs_conectivity_info(const Brush * brush, SculptSession * ss, int stroke_mode) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:6374)
sculpt_brush_stroke_init(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:6741)
sculpt_brush_stroke_invoke(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:7063)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1441)
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2281)
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const _Bool do_debug_handler) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2598)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2735)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2997)
wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3450)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:417)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:491)
``` BKE_pbvh_type(const PBVH * bvh) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/pbvh.c:1452) sculpt_stroke_is_dynamic_topology(const SculptSession * ss, const Brush * brush) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:855) sculpt_automasking_enabled(SculptSession * ss, const Brush * br) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:1221) sculpt_needs_conectivity_info(const Brush * brush, SculptSession * ss, int stroke_mode) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:6374) sculpt_brush_stroke_init(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:6741) sculpt_brush_stroke_invoke(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/editors/sculpt_paint/sculpt.c:7063) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1441) wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2281) wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const _Bool do_debug_handler) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2598) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2735) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2997) wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3450) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:417) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:491) ```

This issue was referenced by 970d7ed860

This issue was referenced by 970d7ed860f1df7ad316830f7fef6babb5c66d7e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70790
No description provided.